# RaTeX

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  README.zh-CN.md  RaTeXCore.podspec  SECURITY.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml  release-crates.yml  release-flutter.yml  release-ios.yml  release-jvm.yml  release-npm.yml
crates/ratex-cairo/: Cargo.toml
crates/ratex-cairo/src/: lib.rs
crates/ratex-ffi/: Cargo.toml
crates/ratex-ffi/include/: ratex.h
crates/ratex-ffi/src/: jni.rs  lib.rs
crates/ratex-font/src/: font_id.rs  metrics.rs
crates/ratex-font/src/data/: metrics_data.rs
crates/ratex-gtk4/: Cargo.toml
crates/ratex-gtk4/examples/: formula_demo.rs
crates/ratex-gtk4/src/: imp.rs  lib.rs
crates/ratex-layout/src/: engine.rs  katex_svg.rs  layout_box.rs  layout_options.rs  lib.rs  stacked_delim.rs  to_display.rs
crates/ratex-layout/tests/: ce_co2_cjk_glyphs.rs  layout_vs_katex.rs  stack_safety.rs
crates/ratex-lexer/src/: lexer.rs
crates/ratex-parser/: Cargo.toml
crates/ratex-parser/src/: environments.rs  lib.rs  macro_expander.rs  parse_node.rs  parser.rs  stack_safety.rs  tests.rs
crates/ratex-parser/src/functions/: def.rs  label_ref.rs  left_right.rs  mod.rs  tag.rs
crates/ratex-parser/src/mhchem/: actions.rs  buffer.rs  engine.rs  mod.rs  patterns.rs  texify.rs
crates/ratex-pdf/: Cargo.toml
crates/ratex-pdf/src/: fonts.rs  lib.rs  renderer.rs
crates/ratex-pdf/tests/: smoke.rs
crates/ratex-py/: Cargo.toml  README.md
crates/ratex-py/src/: lib.rs
crates/ratex-py/tests/: test_docutils_integration.py  test_integration.rs  test_sphinx_integration.py
crates/ratex-render/: Cargo.toml
crates/ratex-render/src/: main.rs  renderer.rs
crates/ratex-render/tests/: bench_render.rs  golden_test.rs  transparent_background.rs
crates/ratex-svg/: Cargo.toml
crates/ratex-svg/src/: lib.rs  standalone.rs
crates/ratex-svg/tests/: golden_svg.rs  public_api.rs  render_svg_cli.rs
crates/ratex-types/src/: color.rs
crates/ratex-unicode-font/: Cargo.toml
crates/ratex-unicode-font/src/: emoji_raster.rs  lib.rs
crates/ratex-wasm/: Cargo.toml
crates/ratex-wasm/src/: lib.rs
demo/: benchmark.html  index.html
demo/android/: README.md  build.gradle.kts
demo/flutter/: .gitignore  README.md  pubspec.yaml
demo/flutter-desktop/: README.md  pubspec.yaml
demo/flutter-desktop/android/app/: build.gradle.kts
demo/flutter-desktop/ios/Runner/: Info.plist
demo/flutter-desktop/lib/: main.dart
demo/flutter-desktop/linux/: CMakeLists.txt
demo/flutter-desktop/windows/: CMakeLists.txt
demo/flutter/lib/: main.dart
demo/flutter/test/: widget_test.dart
demo/jvm/: build.gradle.kts  settings.gradle.kts
demo/react-native/: App.tsx  package-lock.json
demo/react-native-expo/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
demo/web/: index.html
docs/: AUTO_NUMBERING.md  DISPLAYLIST_JSON_PROTOCOL.md  KATEX_SVG_PATH_PLAN.md  LOW_SCORE_CASES.md  MHCHEM_DATA.md  PROJECT_STRUCTURE.md  STACK_SAFETY.md  TECH_SPEC.md  binding-architecture.md
scripts/: set-version.sh  test-formulas.txt  test-unicode-font.sh  update_golden_output.sh
tests/golden/: test_case_ce.txt  test_cases.txt
tools/: dump_mhchem_structure.mjs  extract_mhchem_manual_examples.mjs  generate_mhchem_data.mjs
tools/golden_compare/: compare_golden.py  generate_reference.mjs
website/: .gitignore  astro.config.mjs  package.json
website/public/: demo-live.js  demo-support-table.js  gallery.js  katex-fonts-link.js
website/scripts/: prebuild-platforms-web.mjs  sync-platforms-web.mjs  verify-dist-wasm.mjs
website/src/components/: SiteHeader.astro
website/src/i18n/: utils.ts
website/src/pages/: demo.astro
(+27 files in other folders)
